# kerrtrace

./: .gitignore  LICENSE  README.md  example_config.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/backgrounds/: qwantani_night_puresky.json  satara_night.json  vignaioli_night.json
kerrtrace/: __init__.py  animation.py  cache_utils.py  charged_particles.py  cli.py  config.py  desktop_launcher.py  geometry.py  particle_renderer.py  progress_window.py  raytracer.py  starship.py  starship_cli.py  starship_video.py  webui.py  webui_runtime.py
scripts/: __init__.py  benchmark_render_speed.py  build_codeview_slideshow.py  build_desktop_app.py  build_social_slideshow.py  render_obj_starship_frame.py  render_obj_starship_video.py  setup_mps_env.sh
tests/: test_atlas_cartesian_variant.py  test_kerr_schild_trace.py  test_morris_thorne_destripe.py  test_non_regression.py  test_progress_backend.py  test_runtime_hardening.py  test_starship_cli_command.py  test_starship_entrypoints.py  test_starship_video_module.py  test_webui_runtime_process.py  test_webui_workspace_validation.py
